# ocwd

./: .env.template  .gitignore  README.md  notes.md
backend/: Cargo.toml  diesel.toml
backend/migrations/2024-12-23-192418_create_tables/: up.sql
backend/migrations/2024-12-26-224241_create_tables/: down.sql  up.sql
backend/src/: main.rs  schema.rs
backend/src/common/: db_chat.rs  db_model.rs  db_prompt.rs  db_queue.rs  mod.rs
backend/src/fe/: femodels.rs  feroutes.rs  mod.rs
backend/src/ollama/: mod.rs  ollama_rest_api.rs  ollama_rest_api_models.rs
backend/src/server/: mod.rs  models.rs  ollamachat_error.rs  queue.rs
code_by_ai/html_template/: index.html  index010.html  index011.html  index2.html  index3.html  index4.html  index5.html  index6.html  index7.html  index8.html  index9.html
code_by_ai/html_template/mistral_largest/: companies.html  company_details.html  company_details.js  index.html  script.js  styles.css
code_by_ai/python/blender/: starwars_01.py  starwars_02.py  starwars_03.py
code_by_ai/rust/createimages/: Cargo.toml  image_descriptions.csv  images.csv
code_by_ai/rust/createimages/src/: deepseek.rs  main.rs  mistral_nemo_12b.rs  mistral_small_latest.rs  qwen25coder.rs  qwq_latest.rs
code_by_ai/rust/markdown2html/: Cargo.toml
code_by_ai/rust/markdown2html/src/: aya_expanse.rs  aya_expanse2.rs  deepseekcoder.rs  main.rs  mistral_largest.rs  mistral_largest2.rs
cool_images/: Cargo.toml
cool_images/src/: main.rs
docs/: Install.md  nginx.md  ollamastuff.md  postgres.md
fakewebshopserver/: .env.template  Cargo.toml  readme.md
fakewebshopserver/src/: create_fake_data.rs  fake_data.rs  handler.rs  main.rs  models.rs  webshoperror.rs
frontend/: .env.template  .gitignore  package-lock.json  package.json
frontend/src/lib/: apiService.ts  livemodels.ts  models.ts
frontend/src/lib/components/: Footer.svelte  Header.svelte  LoadingSpinner.svelte
frontend/src/routes/: +layout.svelte  +page.svelte  index.svelte  main.scss
frontend/src/routes/allchats/: +page.server.ts  +page.svelte
frontend/src/routes/chat/: +page.server.ts  +page.svelte
frontend/src/routes/chat/all/: +page.server.ts  +page.svelte
frontend/src/routes/chat/enqueue/: +page.server.ts  +page.svelte
frontend/src/routes/chat/live/: +page.server.ts  +page.svelte
frontend/src/routes/chat/streaming/: +page.server.ts  +page.svelte
frontend/src/routes/home/: +page.svelte
frontend/src/routes/models/: +page.server.ts  +page.svelte
frontend/src/routes/models/create/: +page.svelte
frontend/src/routes/models/information/[model]/: +page.server.ts  +page.svelte
frontend/src/routes/models/listdb/: +page.server.ts  +page.svelte
frontend/src/routes/models/listlocal/: +page.server.ts  +page.svelte
frontend/src/routes/models/running/: +page.server.ts  +page.svelte
frontend/src/routes/prompt/: +page.server.ts  +page.svelte
frontend/src/routes/prompt/[id]/: +page.server.ts  +page.svelte  +page.ts
frontend/src/routes/prompt/add/: +page.server.ts  +page.svelte
frontend/src/routes/prompt/all/: +page.server.ts  +page.svelte
frontend/src/routes/queue/: +page.server.ts  +page.svelte
frontend/src/routes/streaming/: +page.svelte
generic-tools/: Cargo.toml  Readme.md
generic-tools/examples/: flux.rs  parler.rs  postgres.rs  stablediffusion.rs  starcoder2.rs  wuerstchen.rs
generic-tools/src/: lib.rs  main.rs
generic-tools/src/candle_tools/: candletools.rs  mod.rs  token_output_stream.rs
generic-tools/src/tool_flux/: flux.rs  readme.md
generic-tools/src/tool_parler/: parler.rs  readme.md
generic-tools/src/tool_postgres/: postgres.rs
generic-tools/src/tool_stable_diffusion/: clip.rs  mod.rs  sampling.rs  stablediff.rs  vae.rs
generic-tools/src/tool_starcoder2/: mod.rs  starcoder2.rs
generic-tools/src/tool_wuerstchen/: mod.rs  wuerstchen.rs
mcp_postgres/: Cargo.toml
mcp_postgres/src/: main.rs
ollama/: Cargo.toml
ollama/examples/: do_it_all.rs  do_it_all3.rs  write_model_details.rs
ollama/src/: api.rs  error.rs  lib.rs  models.rs  tools.rs  tools_v1.rs  tools_v2.rs
tools/: Cargo.toml
tools/src/: main.rs
webshop/: Cargo.toml  diesel.toml
webshop/migrations/2025-01-07-184327_create_tables/: down.sql  up.sql
webshop/src/: main.rs  schema.rs
webshop/src/client/: api.rs  config.rs  mod.rs  stuff.rs  webmodels.rs
webshop/src/db/: mod.rs  orderitems.rs  orders.rs
webshop/src/error/: mod.rs  webshoperror.rs
