[package]
name = "ocwd"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.9"
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.134"
serde = { version = "1.0.216", features = ["derive"] }
diesel = { version = "2.2.6", features = [
    "postgres",
    "chrono",
    "postgres_backend",
    "serde_json",
] }
chrono = { version = "0.4.39", features = ["serde"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
dotenvy = "0.15.7"
axum = { version = "0.8.0-rc.1", features = ["macros"] }
# axum-extra = { version = "0.10.0-rc.1", features = ["typed-header"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "std",
    "json",
    "fmt",
] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
lazy_static = "1.5.0"
tracing-appender = "0.2.3"
ollama = { path = "../ollama" }
axum-streams = { version = "0.19.0", features = ["json"]}
futures = "0.3.31"
reqwest-streams="0.8.2"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
