[package]
name = "ocwd"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = "0.12.12"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.135"
serde = { version = "1.0.217", features = ["derive"] }
diesel = { version = "2.2.6", features = [
    "postgres",
    "chrono",
    "postgres_backend",
    "serde_json",
] }
chrono = { version = "0.4.39", features = ["serde"] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
dotenvy = "0.15.7"
axum = { version = "0.8.1", features = ["macros"] }
# axum-extra = { version = "0.10.0-rc.1", features = ["typed-header"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "std",
    "json",
    "fmt",
] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
lazy_static = "1.5.0"
tracing-appender = "0.2.3"
ollama = { path = "../ollama" }
generic-tools = { path = "../generic-tools" }


[dependencies.uuid]
version = "1.12.0"
features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]

[features]
default = []
cuda = ["generic-tools/cuda"]
cudnn = ["generic-tools/cudnn"]
accelerate = ["generic-tools/accelerate"]
flash-attn = ["generic-tools/flash-attn"]
metal = ["generic-tools/metal"]

