[package]
name = "fakewebshopserver"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.134"
serde = { version = "1.0.216", features = ["derive"] }
chrono = { version = "0.4.39", features = ["serde"] }
axum = { version = "0.8.0-rc.1", features = ["macros"] }
tower-http = { version = "0.6.2", features = ["cors", "trace"] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = [
    "env-filter",
    "std",
    "json",
    "fmt",
] }
uuid = { version = "1.11.0", features = [
    "v4", # Lets you generate random UUIDs
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
] }
rand = {version = "0.9.0-beta.1"}
