[package]
name = "ollama"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.11", features = ["stream"] }
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
serde_json = "1.0.134"
serde = { version = "1.0.217", features = ["derive"] }
reqwest-streams = { version = "0.8.2", features=["json", "csv", "protobuf", "arrow"] }
futures = "0.3.31"