[package]
name = "ollama"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.12.12", features = ["stream"] }
serde_json = "1.0.137"
serde = { version = "1.0.217", features = ["derive"] }


[[example]]
name = "do_it_all"

[[example]]
name = "write_model_details"

[[example]]
name = "do_it_all3"