[package]
name = "tools"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.42.0", features = ["macros", "rt-multi-thread"] }
futures-util = "0.3.31"
serde_json = { version = "1.0.135" }
tokio-postgres = { version = "0.7.12", features = ["with-chrono-0_4", "with-serde_json-1"] }
chrono = "0.4.39"
serde_postgres = "0.2.0"