[package]
name = "webshop"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.12", features = ["json"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = { version = "1.0.137", features = [] }
chrono = { version = "0.4.39", features = ["serde"] }
diesel = { version = "2.2.6", features = [
    "postgres",
    "chrono",
    "postgres_backend",
    "serde_json",
] }
deadpool-diesel = { version = "0.6.1", features = ["postgres"] }
dotenvy = "0.15.7"
lazy_static = "1.5.0"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
